--- a/instant-search/src/index.css
+++ b/instant-search/src/index.css
@@ -12,3 +12,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.ais-Hits-item {
+  height: calc(100vh - 50px);
+  width: calc(50% - 1rem);
+  display: flex;
+}
+
+.hit {
+  flex: 1 0 auto;
+}
+
+.hitImage {
+  height: 100%;
+  background-position: top center;
+}
